// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: blocks > block with expressions: { 1; x; } 1`] = `
{
  "location": {
    "from": {
      "column": 3,
      "line": 1,
      "token": {
        "col": 3,
        "line": 1,
        "lineBreaks": 0,
        "offset": 2,
        "text": "1",
        "toString": [Function],
        "type": "digit",
        "value": 1,
      },
    },
    "to": {
      "column": 6,
      "line": 1,
      "token": {
        "col": 6,
        "line": 1,
        "lineBreaks": 0,
        "offset": 5,
        "text": "x",
        "toString": [Function],
        "type": "variable",
        "value": "x",
      },
    },
  },
  "return": undefined,
  "statements": [
    {
      "location": {
        "from": {
          "column": 3,
          "line": 1,
          "token": {
            "col": 3,
            "line": 1,
            "lineBreaks": 0,
            "offset": 2,
            "text": "1",
            "toString": [Function],
            "type": "digit",
            "value": 1,
          },
        },
      },
      "type": "expression",
      "value": {
        "location": {
          "from": {
            "column": 3,
            "line": 1,
            "token": {
              "col": 3,
              "line": 1,
              "lineBreaks": 0,
              "offset": 2,
              "text": "1",
              "toString": [Function],
              "type": "digit",
              "value": 1,
            },
          },
        },
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
    },
    {
      "location": {
        "from": {
          "column": 6,
          "line": 1,
          "token": {
            "col": 6,
            "line": 1,
            "lineBreaks": 0,
            "offset": 5,
            "text": "x",
            "toString": [Function],
            "type": "variable",
            "value": "x",
          },
        },
      },
      "type": "expression",
      "value": {
        "location": {
          "from": {
            "column": 6,
            "line": 1,
            "token": {
              "col": 6,
              "line": 1,
              "lineBreaks": 0,
              "offset": 5,
              "text": "x",
              "toString": [Function],
              "type": "variable",
              "value": "x",
            },
          },
        },
        "type": "var",
        "variable": {
          "location": {
            "from": {
              "column": 6,
              "line": 1,
              "token": {
                "col": 6,
                "line": 1,
                "lineBreaks": 0,
                "offset": 5,
                "text": "x",
                "toString": [Function],
                "type": "variable",
                "value": "x",
              },
            },
          },
          "type": "name",
          "value": "x",
        },
      },
    },
  ],
  "type": "block",
}
`;

exports[`parser: blocks > block with only return: { return 2; } 1`] = `
{
  "location": {
    "from": {
      "column": 10,
      "line": 1,
      "token": {
        "col": 10,
        "line": 1,
        "lineBreaks": 0,
        "offset": 9,
        "text": "2",
        "toString": [Function],
        "type": "digit",
        "value": 2,
      },
    },
    "to": {
      "column": 10,
      "line": 1,
      "token": {
        "col": 10,
        "line": 1,
        "lineBreaks": 0,
        "offset": 9,
        "text": "2",
        "toString": [Function],
        "type": "digit",
        "value": 2,
      },
    },
  },
  "return": {
    "location": {
      "from": {
        "column": 10,
        "line": 1,
        "token": {
          "col": 10,
          "line": 1,
          "lineBreaks": 0,
          "offset": 9,
          "text": "2",
          "toString": [Function],
          "type": "digit",
          "value": 2,
        },
      },
    },
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "statements": [],
  "type": "block",
}
`;

exports[`parser: blocks > block with return: { x; return 2; } 1`] = `
{
  "location": {
    "from": {
      "column": 3,
      "line": 1,
      "token": {
        "col": 3,
        "line": 1,
        "lineBreaks": 0,
        "offset": 2,
        "text": "x",
        "toString": [Function],
        "type": "variable",
        "value": "x",
      },
    },
    "to": {
      "column": 13,
      "line": 1,
      "token": {
        "col": 13,
        "line": 1,
        "lineBreaks": 0,
        "offset": 12,
        "text": "2",
        "toString": [Function],
        "type": "digit",
        "value": 2,
      },
    },
  },
  "return": {
    "location": {
      "from": {
        "column": 13,
        "line": 1,
        "token": {
          "col": 13,
          "line": 1,
          "lineBreaks": 0,
          "offset": 12,
          "text": "2",
          "toString": [Function],
          "type": "digit",
          "value": 2,
        },
      },
    },
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "statements": [
    {
      "location": {
        "from": {
          "column": 3,
          "line": 1,
          "token": {
            "col": 3,
            "line": 1,
            "lineBreaks": 0,
            "offset": 2,
            "text": "x",
            "toString": [Function],
            "type": "variable",
            "value": "x",
          },
        },
      },
      "type": "expression",
      "value": {
        "location": {
          "from": {
            "column": 3,
            "line": 1,
            "token": {
              "col": 3,
              "line": 1,
              "lineBreaks": 0,
              "offset": 2,
              "text": "x",
              "toString": [Function],
              "type": "variable",
              "value": "x",
            },
          },
        },
        "type": "var",
        "variable": {
          "location": {
            "from": {
              "column": 3,
              "line": 1,
              "token": {
                "col": 3,
                "line": 1,
                "lineBreaks": 0,
                "offset": 2,
                "text": "x",
                "toString": [Function],
                "type": "variable",
                "value": "x",
              },
            },
          },
          "type": "name",
          "value": "x",
        },
      },
    },
  ],
  "type": "block",
}
`;
